<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMaze">

    <Button
        android:id="@+id/changeTheme"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:text="@string/theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_obstacles"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/button_obstacles"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="61dp"
        android:text="@string/obstacles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_reset"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_solve_maze"
        app:layout_constraintVertical_bias="0.105" />

    <TableLayout
        android:id="@+id/gameTable"
        android:layout_width="399dp"
        android:layout_height="494dp"
        android:layout_margin="0dip"
        android:padding="0dip"
        app:layout_constraintBottom_toTopOf="@+id/button_solve_maze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling,UnknownId">

    </TableLayout>

    <Button
        android:id="@+id/button_solve_maze"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTable"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_email"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginEnd="-12dp"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_obstacles"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="163dp"
        android:layout_height="49dp"
        android:layout_marginEnd="35dp"
        android:text="@string/reset_maze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_obstacles"
        app:layout_constraintTop_toBottomOf="@+id/button_solve_maze"
        app:layout_constraintVertical_bias="0.108"
        tools:ignore="UnknownId" />

</androidx.constraintlayout.widget.ConstraintLayout>
