<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopupActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="411dp"
        android:layout_height="723dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="56dp"
        android:background="#EA9854"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/message"
        android:layout_width="259dp"
        android:layout_height="198dp"
        android:layout_marginBottom="120dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:editable="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:hint="@string/egMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/email"
        android:layout_width="283dp"
        android:layout_height="67dp"
        android:layout_marginTop="189dp"
        android:layout_marginBottom="24dp"
        android:background="#FAFAFA"
        android:clickable="true"
        android:editable="true"
        android:hint="@string/egEmail"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="195dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="50dp"
        android:background="#009688"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="332dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="203dp"
        android:text="@string/share"
        android:textColor="#009688"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>